backend renaming, narrator and sfx and atmopshere playing basics closes #17

--- a/frontend/src/pages/phases/cupid.html
+++ b/frontend/src/pages/phases/cupid.html
@@ -26,7 +26,7 @@
         <div class="pixel-card" style="text-align: center;">
             <h3>Eternal Love</h3>
             <div class="role-image-container" style="margin: 20px auto;">
-                <img src="/CUPID.png" alt="Cupid" class="pixel-art-image" style="max-width: 100px;">
+                <img src="/icons/CUPID.png" alt="Cupid" class="pixel-art-image" style="max-width: 100px;">
             </div>
             <p class="fog-text">You have been struck by Cupid's arrow!</p>
             <p class="fog-text">You are now in love with:</p>
