--- a/frontend/src/pages/phases/day.html
+++ b/frontend/src/pages/phases/day.html
@@ -57,7 +57,7 @@
 
                 <div id="night-waiting-message" class="waiting-message" style="display: none;">
 
-                    <p class="fog-text">Waiting for the sun to set...</p>
+                    <p class="fog-text">Waiting for the sun to set... Close your eyes and surrender to the night.</p>
 
                 </div>
 
