--- a/frontend/src/pages/phases/role-distribution.html
+++ b/frontend/src/pages/phases/role-distribution.html
@@ -20,6 +20,6 @@
     </div>
 
     <div id="distribution-waiting-message" class="waiting-message" style="display: none;">
-        <p class="fog-text">Memorize your role. The game will start soon...</p>
+        <p class="fog-text">Memorize your role... If you have, close your eyes. The night will begin shortly...</p>
     </div>
 </div>
