--- a/frontend/src/pages/phases/red-lady.html
+++ b/frontend/src/pages/phases/red-lady.html
@@ -10,7 +10,7 @@
         </ul>
     </div>
 
-    <div class="manager-controls">
+    <div id="red-lady-controls" class="manager-controls">
         <button id="confirm-sleepover-btn" class="btn btn-primary full-width" disabled>
             Confirm Visit
         </button>
