--- a/frontend/src/pages/phases/seer.html
+++ b/frontend/src/pages/phases/seer.html
@@ -13,7 +13,7 @@
             </ul>
         </div>
 
-        <div class="manager-controls">
+        <div id="seer-controls" class="manager-controls">
             <button id="confirm-seer-target-btn" class="btn btn-primary full-width" disabled>
                 Reveal Role
             </button>
