--- a/frontend/src/pages/phases/werewolves.html
+++ b/frontend/src/pages/phases/werewolves.html
@@ -10,7 +10,7 @@
         </ul>
     </div>
 
-    <div class="manager-controls">
+    <div id="werewolf-controls" class="manager-controls">
         <button id="confirm-werewolf-target-btn" class="btn btn-danger full-width" disabled>
             Confirm Kill
         </button>
