--- a/frontend/src/pages/phases/witch.html
+++ b/frontend/src/pages/phases/witch.html
@@ -9,7 +9,7 @@
 
     <!-- HEALING POTION -->
     <div class="pixel-card" id="heal-potion-section">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
+        <div id="heal-controls" style="display: flex; justify-content: space-between; align-items: center;">
             <div>
                 <h4>Healing Potion</h4>
                 <p class="fog-text" style="font-size: 0.8rem;">Save the victim from death.</p>
@@ -18,12 +18,12 @@
                 Use
             </button>
         </div>
-        <p id="heal-used-msg" class="highlight-text" style="display: none; font-size: 0.8rem; margin-top: 5px;">Potion used tonight.</p>
+        <p id="heal-used-msg" class="highlight-text" style="display: none; font-size: 0.8rem; margin-top: 5px;">Potion already used.</p>
     </div>
 
     <!-- KILLING POTION -->
     <div class="pixel-card" id="kill-potion-section">
-        <div style="display: flex; justify-content: space-between; align-items: center;">
+        <div id="kill-controls" style="display: flex; justify-content: space-between; align-items: center;">
             <div>
                 <h4>Killing Potion</h4>
                 <p class="fog-text" style="font-size: 0.8rem;">Eliminate another player.</p>
