--- a/frontend/src/pages/game.html
+++ b/frontend/src/pages/game.html
@@ -3,4 +3,18 @@
     <div id="phase-view-container">
         <!-- Content will be injected here dynamically -->
     </div>
+
+    <!-- GLOBAL DEATH ANNOUNCEMENT POPUP -->
+    <div id="death-popup-overlay" class="modal-overlay" style="display: none;">
+        <div class="pixel-card modal-content">
+            <h2 class="highlight-text">Grim News</h2>
+            <p class="fog-text">The following souls have left us:</p>
+            <ul id="newly-dead-list" class="pixel-list">
+                <!-- Deaths will be injected here -->
+            </ul>
+            <button id="close-death-popup" class="btn btn-primary full-width" style="margin-top: 20px;">
+                I understand
+            </button>
+        </div>
+    </div>
 </div>
