--- a/frontend/src/pages/start.html
+++ b/frontend/src/pages/start.html
@@ -1,8 +1,8 @@
 
 <div class="app-container">
     <div style="margin-top: 50px;">
-        <h1>Werewolf<br>Soundboard</h1>
-        <p class="fog-text">The village is quiet...</p>
+        <h1>Werewolf Ljubljana</h1>
+        <p class="fog-text">by Ben Hauptvogel</p>
     </div>
     
     <nav style="margin-top: auto;">
