sheriff rendering and red person

--- a/frontend/src/pages/phases/day.html
+++ b/frontend/src/pages/phases/day.html
@@ -1,3 +1,10 @@
+<style>
+    .sheriff-badge {
+        margin-right: 4px;
+        display: inline-block;
+    }
+</style>
+
 <div class="day-container">
     <!-- STATE 1: VOTING -->
     <div id="day-voting-view">
